Modify portfolio details and personal information
Updated personal information and links in the portfolio.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header class="header">
-        <a href="#" class="logo">Your Name</a>
+        <a href="#" class="logo">Lemming</a>
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
@@ -24,15 +24,15 @@
     <section class="home" id="home">
         <div class="home-content">
             <h3>Hello, I am</h3>
-            <h1>Your Name</h1>
+            <h1>Muhammad Irfan Al-amin Bin Mohammad Azhar</h1>
             <h3>And I'm a <span class="multiple-text"></span></h3>
-            <p>Brief, punchy description of your professional focus (e.g., "A skilled Full-Stack Developer specializing in modern web applications and scalable solutions.")</p>
+            <p>A Student In Pursuit In Studying In Computer Science And SAS Certificate</p>
             <div class="social-media">
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"><i class="fab fa-linkedin-in"></i></a>
                 <a href="#"><i class="fab fa-github"></i></a>
                 <a href="#"><i class="fas fa-envelope"></i></a>
             </div>
-            <a href="your_resume.pdf" class="btn" download>Download CV</a>
+            <a href="Resume Muhammad Irfan Al-amin.pdf" class="btn" download>Download CV</a>
         </div>
         <div class="home-img">
             </div>
@@ -116,7 +116,7 @@
 
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2025 by Your Name | All Rights Reserved.</p>
+            <p>Copyright &copy; 2025 by Muhammad Irfan Al-amin | All Rights Reserved.</p>
         </div>
         <div class="footer-iconTop">
             <a href="#home"><i class="fas fa-arrow-up"></i></a>
