--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
 
     <section class="about" id="about">
         <div class="about-img">
+            <img src="kpm.jpg" alt="Project 2">
             </div>
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
-            <h3>Your Professional Title Here</h3>
+            <h3>Student In Computer Science + SAS Certificate</h3>
+            
             <p>Tell your story: your background, what motivates you, your professional journey, and what you aim to achieve. Focus on achievements and **value you bring**.</p>
         </div>
     </section>
@@ -55,13 +57,13 @@
             <div class="skills-box">
                 <i class="fas fa-code"></i>
                 <h3>Frontend Development</h3>
-                <p>HTML5, CSS3 (Sass/Less), JavaScript (React, Vue.js), Responsive Design, UI/UX Principles.</p>
+                <p>HTML, CSS, JavaScript, Responsive Design, UI/UX.</p>
             </div>
 
             <div class="skills-box">
                 <i class="fas fa-database"></i>
                 <h3>Backend Development</h3>
-                <p>Node.js (Express), Python (Django/Flask), SQL (PostgreSQL, MySQL), RESTful APIs, Authentication.</p>
+                <p>Node.js, Python, MySQL, APIs, Authentication.</p>
             </div>
 
             <div class="skills-box">
@@ -78,10 +80,10 @@
         <div class="portfolio-container">
             
             <div class="portfolio-box">
-                <img src="project1-thumbnail.jpg" alt="Project 1">
+                <img src="voting.png" alt="Project 1">
                 <div class="portfolio-layer">
-                    <h4>Web Design Project 1</h4>
-                    <p>Brief description of the project, technology used, and key features.</p>
+                    <h4>College Voting System</h4>
+                    <p>This System Use The SQLite For Database And Use Javascript for Displaying Result In Graph.</p>
                     <a href="#"><i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
